Prod-EU/force-app/main/default/objects/Finance_Detail__c/Finance_Detail__c.object-meta.xml
<CustomObject>
    <label>Finance Detail</label>
    <nameField>
        <displayFormat>FD-{0000}</displayFormat>
        <label>Finance Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>