Prod-EU/force-app/main/default/objects/Finance_Detail__c/fields/Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Account Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>