Prod-EU/force-app/main/default/objects/Finance_Detail__c/fields/Bank_Id__c.field-meta.xml
<CustomField>
    <fullName>Bank_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>