Prod-EU/force-app/main/default/objects/Finance_Detail__c/fields/Bank_Identifier_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Identifier_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Identifier Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>