Prod-EU/force-app/main/default/objects/Finance_Detail__c/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <label>Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>Amex</fullName>
                <label>AMEX</label>
            </value>
            <value>
                <fullName>American Express</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>