Prod-EU/force-app/main/default/objects/Finance_Detail__c/fields/CC_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CC Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Finance Details</relationshipLabel>
    <relationshipName>Finance_Details</relationshipName>
    <type>Lookup</type>
</CustomField>