Prod-EU/force-app/main/default/objects/Finance_Detail__c/fields/CC_CUR__c.field-meta.xml
<CustomField>
    <fullName>CC_CUR__c</fullName>
    <label>CC CUR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Currency</valueSetName>
    </valueSet>
</CustomField>