Prod-EU/force-app/main/default/objects/Finance_Detail__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiry Date</label>
    <length>7</length>
    <type>Text</type>
</CustomField>