Prod-EU/force-app/main/default/objects/Finance_Detail__c/fields/Finance_Type__c.field-meta.xml
<CustomField>
    <fullName>Finance_Type__c</fullName>
    <label>Finance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>