Prod-EU/force-app/main/default/objects/Finance_Detail__c/fields/InActive__c.field-meta.xml
<CustomField>
    <fullName>InActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InActive?</label>
    <type>Checkbox</type>
</CustomField>