Prod-EU/force-app/main/default/objects/Finance_Detail__c/fields/International_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>International_Bank_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>International Bank Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>