Prod-EU/force-app/main/default/objects/Finance_Detail__c/fields/Last_4_Digits_of_Token__c.field-meta.xml
<CustomField>
    <fullName>Last_4_Digits_of_Token__c</fullName>
    <description>Last 4 Digits of the Token</description>
    <formula>RIGHT(Token__c, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last 4 Digits</label>
    <type>Text</type>
</CustomField>