Prod-EU/force-app/main/default/objects/Finance_Detail__c/fields/Name_on_Account__c.field-meta.xml
<CustomField>
    <fullName>Name_on_Account__c</fullName>
    <description>Name on the Charge Card/Bank Account Holder Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Card Holder Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>