Prod-EU/force-app/main/default/objects/Finance_Detail__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Card Token</label>
    <length>60</length>
    <type>Text</type>
</CustomField>