Prod-EU/force-app/main/default/objects/Finance_Detail__c/recordTypes/Bank.recordType-meta.xml
<RecordType>
    <fullName>Bank</fullName>
    <active>true</active>
    <label>Bank</label>
</RecordType>