Prod-EU/force-app/main/default/objects/Finance_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Card_Type__c</columns>
    <columns>CC_Address__c</columns>
    <columns>Primary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>